<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backr_chung"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.giao_dien_chuyen_de.Mainbmi" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0080FF"
                android:gravity="center" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cc"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editChieucao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/cccb"
                    android:inputType="numberDecimal"
                    android:textAllCaps="true"
                    android:textColorHint="@android:color/darker_gray" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cn"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editCannang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cncb"
                    android:inputType="numberDecimal"
                    android:textColorHint="@android:color/darker_gray" />

            </TableRow>

            <TableRow
                android:id="@+id/tblBaoCao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtBaoCao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </TableRow>

            <Button
                android:id="@+id/btnTinhBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textColor="@android:color/white" />

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/csbmi"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:editable="false"
                    android:ems="10" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kq"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" >

                <EditText
                    android:id="@+id/editChuanDoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btnluu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnThulai"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnlichsu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ls"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
